# jem-trans

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  proxy_setup.rs  state.rs
src-tauri/src/commands/: lang.rs  llm.rs  mod.rs  theme.rs  tts.rs
src-tauri/src/logic/: mod.rs  parse_chat_messages.rs  play_audio.rs
src/app/: App.tsx
src/app/consts/: aiServices.ts  defaultSettings.ts  defaultStoresValues.ts  languages.ts  pages.tsx  prompts.ts
src/app/contexts/: LlmServiceContext.tsx  PageContext.tsx  SettingsContext.tsx  UserMetaContext.tsx
src/app/hooks/: useDebounce.ts  useDebouncedCallback.ts  useLlmService.ts  useLoadColors.ts  useNeuralSetup.ts  useSettings.ts  useThrottle.ts  useUserMeta.ts
src/app/llmServices/: LlamaService.ts  OpenAiApiService.ts  OpenRouterService.ts
src/app/stores/: settingsStore.ts  userMetaStore.ts
src/app/styles/: index.css
src/app/types/: AiService.ts  AppSettings.ts  LangDetectionResult.ts  Langs.ts  LlmService.ts  LlmServiceName.ts  ModelProfile.ts
src/components/AppBar/: AppBar.scss  AppBar.tsx  AppBarActions.tsx  consts.ts
src/components/Navigation/: Navigation.scss  Navigation.tsx
src/components/Outlet/: Outlet.tsx
src/components/ui/: Tooltip.tsx  select.tsx  switch.tsx
src/components/ui/IconButton/: IconButton.scss  IconButton.tsx
src/pages/SettingsPage/: index.ts
src/pages/SettingsPage/components/: LabelWithHint.tsx  (+7 more)
src/pages/TranslatorPage/: index.ts
(+22 files in other folders)
