[package]
name = "jem-trans"
version = "0.1.0"
description = "LLM translator"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jem_trans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.21"
hex = "0.4"                                      # Для конвертации цветов в HEX строку
tauri-plugin-store = "2.4.1"
# Включаем feature "serde" для whatlang, чтобы Lang и Script можно было отправлять на фронт
whatlang = { version = "0.18", features = ["serde"] }
directories = "6.0"
tokio = { version = "1", features = ["full"] }
async-openai = { version = "0.32.4", features = ["full"] }
